test-schimb site

--- a/McLaren/legend.html
+++ b/McLaren/legend.html
@@ -110,7 +110,9 @@
         </p>
       </div>
 
-      <section class="quote-card"></section>
+      <section class="quote-section">
+        <div class="quote-container"></div>
+      </section>
     </section>
   </body>
 </html>
