legend page finished

--- a/McLaren/blog-legend.html
+++ b/McLaren/blog-legend.html
@@ -46,11 +46,11 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark> The Origin of <span class="orange"> Excellence</span> </mark></p>
-        <a href="blog-experience.html#blog-pages-experience-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-legend.html#blog-pages-bruce-id" id="btnDiscover">Read the Article</a>
       </div>
     </section>
 
-    <section id="blog-pages-innovation-id" class="blog-pages-section">
+    <section id="blog-pages-bruce-id" class="blog-pages-section">
       <div class="blog-pages-container">
         <p class="blog-pages-title">Where McLaren’s Story Began</p>
         <p class="blog-pages-data-read">October 8, 2025 | 5 min read</p>
@@ -108,11 +108,76 @@
           echoes of his spirit. His legacy lives not only in the cars that bear his name but in the philosophy that
           drives them: the belief that limits exist only to be surpassed.
         </p>
+
+        <div class="blog-pages-photos-containers">
+          <div id="blog-pages-bruce-photo3" class="blog-pages-photos"></div>
+        </div>
+        <span class="text-info-blog-photos">
+          Before the legend, before the loss — Bruce McLaren, the young dreamer whose passion for racing shaped generations to come.
+        </span>
+
+        <p class="blog-pages-text">
+          Today, McLaren stands as one of the most respected names in motorsport and automotive engineering. The company’s dedication to technology, design, and performance remains rooted in the ideals Bruce set more than six decades ago. Each innovation — from hybrid powertrains to carbon-fiber monocoques — reflects his commitment to fusing art and science in motion. <br><br>
+          And so, the story of McLaren is not merely about victories or machines. It’s about the enduring<span class="orange">  legacy of a young man from New Zealand who dared to dream </span>— and built a future that still moves us today.
+        </p>
       </div>
 
-      <section class="quote-section">
-        <div class="quote-container"></div>
-      </section>
+      <div class="quote-section">
+        <div class="quote-container">
+          <div class="quote-photo-and-author-description-container">
+            <img id="bruce-img-quote-section" src="photos-blog/Bruce-McLaren-Remuera-Heritage.webp" />
+            <div class="author-description-container">
+              <p class="author">Bruce McLaren</p>
+              <p class="author-description">McLaren Founder</p>
+            </div>
+          </div>
+          <div class="quote-text">
+            <p>
+              "To do something well is so worthwhile that to die trying to do it better cannot be foolhardy. It would be
+              a waste of life to do nothing with one's ability, for I feel that life is measured in achievement, not in
+              years alone."
+            </p>
+          </div>
+        </div>
+      <div>
+    </section>
+
+    <section class="footer-section">
+      <div class="container-footer">
+        <div class="footer-sections">
+          <p class="footer-subtitle">AUTOMOTIVE</p>
+          <a href="car-750S.html" class="footer-text">750S</a>
+          <a href="car-artura.html" class="footer-text">Artura</a>
+          <a href="car-W1.html" class="footer-text">W1</a>
+          <a href="car-GTS.html" class="footer-text">GTS</a>
+        </div>
+
+        <div class="footer-sections">
+          <p class="footer-subtitle">BLOG</p>
+          <a class="footer-text">Formula 1</a>
+          <a class="footer-text">Innovation</a>
+          <a class="footer-text">Experience</a>
+        </div>
+
+        <div class="footer-sections">
+          <p class="footer-subtitle">HISTORY</p>
+          <a class="footer-text">The Beginning of a Legend</a>
+          <a class="footer-text">From Track to Road</a>
+        </div>
+
+        <div class="footer-sections">
+          <p class="footer-subtitle">POLICIES & TERMS</p>
+          <a class="footer-text">Cookie Policy</a>
+          <a class="footer-text">Privacy Policy</a>
+          <a class="footer-text">Terms and Conditions</a>
+          <a class="footer-text">Legal Notice</a>
+        </div>
+
+        <div class="footer-sections">
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text"><span class="M">M</span>c<span class="orange">Laren</span></p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
