road-track finished + small updates(fonts)

--- a/McLaren/blog-legend.html
+++ b/McLaren/blog-legend.html
@@ -53,7 +53,7 @@
     <section id="blog-pages-bruce-id" class="blog-pages-section">
       <div class="blog-pages-container">
         <p class="blog-pages-title">Where McLaren’s Story Began</p>
-        <p class="blog-pages-data-read">October 8, 2025 | 5 min read</p>
+        <p class="blog-pages-data-read">October 8, 2025 | 8 min read</p>
 
         <p class="blog-pages-text">
           The story of McLaren is, at its core, the story of one man —
@@ -117,8 +117,11 @@
         </span>
 
         <p class="blog-pages-text">
-          Today, McLaren stands as one of the most respected names in motorsport and automotive engineering. The company’s dedication to technology, design, and performance remains rooted in the ideals Bruce set more than six decades ago. Each innovation — from hybrid powertrains to carbon-fiber monocoques — reflects his commitment to fusing art and science in motion. <br><br>
-          And so, the story of McLaren is not merely about victories or machines. It’s about the enduring<span class="orange">  legacy of a young man from New Zealand who dared to dream </span>— and built a future that still moves us today.
+          Today, McLaren stands as one of the most respected names in motorsport and automotive engineering. The company’s
+           dedication to technology, design, and performance remains rooted in the ideals Bruce set more than six decades ago.
+            Each innovation — from hybrid powertrains to carbon-fiber monocoques — reflects his commitment to fusing art and science in motion. <br><br>
+          And so, the story of McLaren is not merely about victories or machines. It’s about the enduring<span class="orange">
+              legacy of a young man from New Zealand who dared to dream </span>— and built a future that still moves us today.
         </p>
       </div>
 
