--- a/McLaren/index.html
+++ b/McLaren/index.html
@@ -36,8 +36,8 @@
 
       <div id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
+          <p class="M">M</p>
+          <p class="orange">cLaren</p>
           <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
         </a>
 
@@ -59,10 +59,8 @@
     </section>
 
     <section id="cars" class="cars-section">
-      <p id="title-cars-section">
-        A showcase of speed, precision, and pure adrenaline
-        <span class="orange">.</span>
-      </p>
+      <!-- prettier-ignore -->
+      <p id="title-cars-section">A showcase of speed, precision, and pure adrenaline<span class="orange">.</span></p>
 
       <div id="cars-container">
         <a href="car-750S.html" class="car" id="car1">
@@ -130,10 +128,10 @@
             passion for performance. From its early racing cars, the team quickly became one of the most successful in
             Formula 1, earning numerous world titles.
           </p>
-          <button class="view-story-button">
+          <a href="blog-legend.html" class="view-story-button">
             VIEW THE STORY
             <img src="photos/arrow-right-stroke (2).png" loading="lazy" />
-          </button>
+          </a>
         </div>
       </div>
 
@@ -145,10 +143,10 @@
             Over the decades, McLaren transformed its racing DNA into road-going supercars, combining cutting-edge
             aerodynamics, lightweight design, and futuristic technology.
           </p>
-          <button class="view-story-button">
+          <a href="blog-track-road.html" class="view-story-button">
             VIEW THE STORY
             <img src="photos/arrow-right-stroke (2).png" loading="lazy" />
-          </button>
+          </a>
         </div>
         <div class="history-photo2"></div>
       </div>
