responsive media queries

--- a/McLaren/blog-formula1.html
+++ b/McLaren/blog-formula1.html
@@ -23,7 +23,7 @@
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="blog-hero-section" class="hero-section">
       <div id="hero-photo-formula1" class="hero-background-photo-car-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -46,7 +46,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark><span class="M">M</span>c<span class="orange">Laren's </span>2024 Journey </mark></p>
-        <a href="blog-formula1.html#blog-pages-formula1-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-formula1.html#blog-pages-formula1-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
       </div>
     </section>
 
