--- a/McLaren/blog-innovation.html
+++ b/McLaren/blog-innovation.html
@@ -17,13 +17,13 @@
       rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="blog-hero-section" class="hero-section">
       <div id="hero-photo-innovation" class="hero-background-photo-car-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -46,7 +46,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark><span class="M">M</span>c<span class="orange">Laren's </span>Culture of Innovation </mark></p>
-        <a href="blog-innovation.html#blog-pages-innovation-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-innovation.html#blog-pages-innovation-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
       </div>
     </section>
 
