--- a/McLaren/blog-track-road.html
+++ b/McLaren/blog-track-road.html
@@ -23,7 +23,7 @@
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="blog-hero-section" class="hero-section">
       <div id="hero-photo-track-road" class="hero-background-photo-car-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -46,7 +46,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark><span class="orange">Beyond</span> the Finish Line </mark></p>
-        <a href="blog-track-road.html#blog-pages-road-track-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-track-road.html#blog-pages-road-track-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
       </div>
     </section>
 
