--- a/McLaren/car-750S.html
+++ b/McLaren/car-750S.html
@@ -17,7 +17,7 @@
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="cars-hero-section" class="hero-section">
       <div id="hero-photo-750s" class="hero-background-blog-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -41,7 +41,7 @@
         <p>
           <span class="allura-cars-overlay">750S</span>
         </p>
-        <a href="car-750S.html#introduction-cars" id="btnDiscover">Discover more</a>
+        <a href="car-750S.html#introduction-cars" id="btn-hidden" class="btnDiscover">Discover more</a>
       </div>
     </section>
 
@@ -73,7 +73,7 @@
             Speed
             <span class="measurement">KM/H</span>
           </p>
-          <p class="info-specs">332</p>
+          <p id="size-correction" class="info-specs">332</p>
         </div>
       </div>
     </section>
