--- a/McLaren/index.html
+++ b/McLaren/index.html
@@ -54,7 +54,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big-index"><span><mark>  <span class="M"> M</span>c<span class="orange">Laren </span> W1</mark></span></p>
-        <a href="car-W1.html" id="btnDiscover">Discover more</a>
+        <a href="car-W1.html" class="btnDiscover">Discover more</a>
       </div>
     </section>
 
@@ -90,7 +90,7 @@
       <p id="blog-title">Discover</p>
       <div class="blog-cards-container">
         <a href="blog-formula1.html" class="blog-cards">
-          <img class="blog-images" loading="lazy" src="photos/race-report_0004_2213398172-1-2.jpg" />
+          <img class="blog-images" loading="lazy" src="photos-blog/lando-norris-mclaren-mcl38.jpg" />
           <div class="overlay"></div>
           <span class="blog-cards-title">McLaren in Formula 1</span>
           <img class="arrow-right" loading="lazy" src="photos/arrow-right-stroke (2).png" />
@@ -105,7 +105,7 @@
           <img
             class="blog-images"
             loading="lazy"
-            src="photos/017_Day4_McLaren_Driving_Inspiration (1)_crop-16x9.webp" />
+            src="photos-blog/The-Chateau-McLaren-Experience-McLaren_Car_Week_2025_Day1_0-1024x534.jpg" />
           <div class="overlay"></div>
           <span class="blog-cards-title">Owning a McLaren Experience</span>
           <img class="arrow-right" loading="lazy" src="photos/arrow-right-stroke (2).png" />
