--- a/McLaren/blog-experience.html
+++ b/McLaren/blog-experience.html
@@ -23,7 +23,7 @@
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="blog-hero-section" class="hero-section">
       <div id="hero-photo-experience" class="hero-background-photo-car-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -46,7 +46,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark> Living the <span class="M">M</span>c<span class="orange">Laren </span>Dream </mark></p>
-        <a href="blog-experience.html#blog-pages-experience-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-experience.html#blog-pages-experience-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
       </div>
     </section>
 
