--- a/McLaren/blog-legend.html
+++ b/McLaren/blog-legend.html
@@ -23,7 +23,7 @@
       rel="stylesheet" />
   </head>
   <body>
-    <section id="home" class="hero-section">
+    <section id="blog-hero-section" class="hero-section">
       <div id="hero-photo-legend" class="hero-background-photo-car-pages"></div>
 
       <div href="index.html#home" id="header">
@@ -46,7 +46,7 @@
       <div id="video-overlay">
         <!-- prettier-ignore -->
         <p class="big"><mark> The Origin of <span class="orange"> Excellence</span> </mark></p>
-        <a href="blog-legend.html#blog-pages-bruce-id" id="btnDiscover">Read the Article</a>
+        <a href="blog-legend.html#blog-pages-bruce-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
       </div>
     </section>
 
