--- a/McLaren/blog-experience.html
+++ b/McLaren/blog-experience.html
@@ -28,9 +28,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -40,21 +39,39 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
+      </nav>
+
       <div id="video-overlay">
         <!-- prettier-ignore -->
-        <p class="big"><mark> Living the <span class="M">M</span>c<span class="orange">Laren </span>Dream </mark></p>
-        <a href="blog-experience.html#blog-pages-experience-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
+        <p class="big hidden"><mark> Living the <span class="M">M</span>c<span class="orange">Laren </span>Dream </mark></p>
+        <a href="blog-experience.html#blog-pages-experience-id" id="btn-hidden" class="btnDiscover hidden">
+          Read the Article
+        </a>
       </div>
     </section>
 
     <section id="blog-pages-experience-id" class="blog-pages-section">
       <div class="blog-pages-container">
-        <p class="blog-pages-title">Life with a McLaren</p>
-        <p class="blog-pages-data-read">October 5, 2025 | 5 min read</p>
-        <p class="blog-pages-text">
+        <p class="blog-pages-title hidden">Life with a McLaren</p>
+        <p class="blog-pages-data-read hidden">October 5, 2025 | 5 min read</p>
+        <p class="blog-pages-text hidden">
           Owning a McLaren is not simply about transportation — it’s about stepping into a world of engineering
           excellence, design artistry, and racing heritage. Each model, from the 750S to the innovative Artura, is a
           masterpiece created with the singular goal of delivering unmatched performance and an unforgettable driving
@@ -66,13 +83,13 @@
           <span class="orange">0–100 km/h in under 3 seconds</span>
           or the razor-sharp handling on a winding road, every drive feels like a private performance on a racetrack.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-experience-photo1" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           Behind the Wheel – The moment when engineering perfection meets pure emotion.
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Step inside, and you’ll find a
           <span class="orange">cabin designed around the driver.</span>
           Lightweight carbon-fiber structures, hand-stitched leather, and intuitive controls blend to create an
@@ -85,13 +102,13 @@
           and speed. It’s an experience that extends beyond the road, connecting like-minded individuals who value
           excellence and performance.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-experience-photo2" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           Personalized Luxury – Hand-crafted interiors tailored to reflect individuality.
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           With hybrid models like the Artura, owning a McLaren also means
           <span class="orange">experiencing the future of performance.</span>
           Electric torque delivery, sustainable engineering, and advanced aerodynamics are not abstract concepts —
@@ -101,13 +118,13 @@
           connections with the brand ensure that ownership feels like a partnership. Every McLaren is maintained with
           the same attention to detail that created it, ensuring that performance and value endure.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-experience-photo3" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           From Track to Road – Racing DNA that transforms daily driving into performance art.
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Owning a McLaren is
           <span class="orange">more than possession.</span>
           It’s an invitation to live at the edge of performance and design — to be part of a legacy that began on the
@@ -128,23 +145,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -153,5 +170,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
