--- a/McLaren/blog-formula1.html
+++ b/McLaren/blog-formula1.html
@@ -28,9 +28,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -40,21 +39,39 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
+      </nav>
+
       <div id="video-overlay">
         <!-- prettier-ignore -->
-        <p class="big"><mark><span class="M">M</span>c<span class="orange">Laren's </span>2024 Journey </mark></p>
-        <a href="blog-formula1.html#blog-pages-formula1-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
+        <p class="big hidden"><mark><span class="M">M</span>c<span class="orange">Laren's </span>2024 Journey </mark></p>
+        <a href="blog-formula1.html#blog-pages-formula1-id" id="btn-hidden" class="btnDiscover hidden">
+          Read the Article
+        </a>
       </div>
     </section>
 
     <section id="blog-pages-formula1-id" class="blog-pages-section">
       <div class="blog-pages-container">
-        <p class="blog-pages-title">McLaren’s 2024 Comeback: A New Golden Era</p>
-        <p class="blog-pages-data-read">October 3, 2025 | 6 min read</p>
-        <p class="blog-pages-text">
+        <p class="blog-pages-title hidden">McLaren’s 2024 Comeback: A New Golden Era</p>
+        <p class="blog-pages-data-read hidden">October 3, 2025 | 6 min read</p>
+        <p class="blog-pages-text hidden">
           For over two decades, McLaren fans have waited for a return to the very top of Formula 1. Once a dominant
           force, the team had slipped into years of struggle — flashes of brilliance overshadowed by inconsistency. But
           2024 changed everything. With the MCL38, McLaren mounted one of the most remarkable comebacks in modern F1
@@ -62,11 +79,11 @@
           <span class="orange">Constructors’ Championship</span>
           for the first time since 1998. For fans, it was more than a title. It was redemption.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-formula1-photo1" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">2024 Formula One World Constructors' Championship</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Every great F1 story begins with the car, and for McLaren, the
           <span class="orange">MCL38</span>
           was the masterpiece. Designed with a relentless focus on aerodynamics and agility, it delivered balance in
@@ -76,11 +93,11 @@
           Reliability was another key factor. While rivals struggled with mechanical gremlins, McLaren executed a season
           with remarkable stability, ensuring that every opportunity translated into points.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-formula1-photo2" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">McLaren reveal MCL38</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           No car wins on its own. In 2024, McLaren’s driver lineup proved one of the strongest on the grid.
           <span class="orange">Lando Norris</span>
           finally achieved his long-awaited first victory, a milestone that lifted the entire team and cemented his
@@ -92,11 +109,11 @@
           The highlight of the season? Hungary. A flawless performance by both drivers delivered a stunning 1-2 finish —
           a statement to the world that McLaren was back where it belonged.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-formula1-photo3" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">McLaren duo dominates Hungary GP 2024: Norris & Piastri.</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           McLaren’s journey wasn’t without obstacles. Red Bull still had outright pace on certain tracks, Ferrari fought
           fiercely, and Mercedes was determined to return to the front. Strategic calls also tested McLaren. A few
           missed opportunities — like pit stop timing or tire selection — showed that even a championship-winning team
@@ -108,11 +125,11 @@
           expected. For the first time in years, the Woking factory buzzed with confidence. Engineers, mechanics, and
           strategists worked seamlessly with drivers, creating a synergy that became McLaren’s secret weapon.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-formula1-photo4" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">Andrea Stella with the McLaren duo, shaping a new era.</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Winning a championship is one challenge. Staying at the top is another. McLaren heads into 2025 with momentum
           but also with a target on its back. Rivals will push harder than ever to reclaim ground. Still, McLaren has
           more than just speed — they have vision. With Lando Norris hitting his prime and Oscar Piastri proving himself
@@ -135,23 +152,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -160,5 +177,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
