--- a/McLaren/blog-innovation.html
+++ b/McLaren/blog-innovation.html
@@ -28,9 +28,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -40,21 +39,39 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
+      </nav>
+
       <div id="video-overlay">
         <!-- prettier-ignore -->
-        <p class="big"><mark><span class="M">M</span>c<span class="orange">Laren's </span>Culture of Innovation </mark></p>
-        <a href="blog-innovation.html#blog-pages-innovation-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
+        <p class="big hidden"><mark><span class="M">M</span>c<span class="orange">Laren's </span>Culture of Innovation </mark></p>
+        <a href="blog-innovation.html#blog-pages-innovation-id" id="btn-hidden" class="btnDiscover hidden">
+          Read the Article
+        </a>
       </div>
     </section>
 
     <section id="blog-pages-innovation-id" class="blog-pages-section">
       <div class="blog-pages-container">
-        <p class="blog-pages-title">Engineering Tomorrow: Inside McLaren’s Innovation Journey</p>
-        <p class="blog-pages-data-read">October 4, 2025 | 5 min read</p>
-        <p class="blog-pages-text">
+        <p class="blog-pages-title hidden">Engineering Tomorrow: Inside McLaren’s Innovation Journey</p>
+        <p class="blog-pages-data-read hidden">October 4, 2025 | 5 min read</p>
+        <p class="blog-pages-text hidden">
           McLaren has never been just about building fast cars. From the earliest days in Formula 1 to the cutting-edge
           road cars of today, the company has positioned itself as a
           <span class="orange">laboratory of innovation.</span>
@@ -70,11 +87,11 @@
           vision, creativity, and passion. By fostering an environment where ideas can challenge convention, McLaren
           ensures that innovation is not a one-time achievement but a continuous journey.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-innovation-photo1" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">McLaren engineers shaping the future of performance.</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           One of McLaren’s most famous innovations is the use of
           <span class="orange">carbon fiber.</span>
           Back in 1981, McLaren shocked the racing world with the MP4/1, the first F1 car to feature a full carbon fiber
@@ -83,13 +100,13 @@
           <span class="orange">enhances both performance and safety</span>
           , proving that innovation is not just about speed, but also about protecting drivers.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-innovation-photo2" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           The carbon fiber monocoque — the lightweight core that defines McLaren’s strength and agility
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Innovation also means thinking ahead. With the launch of the McLaren P1 and later the Artura, McLaren
           <span class="orange">embraced electrification without compromising performance.</span>
           Hybrid systems deliver instant torque, greater efficiency, and the thrill of acceleration that feels
@@ -102,13 +119,13 @@
           company’s commitment to
           <span class="orange">blending beauty with function.</span>
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-innovation-photo3" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           Advanced hybrid architecture integrating electric and combustion power seamlessly.
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           McLaren’s story of innovation is far from complete. As the automotive world moves toward sustainability,
           connectivity, and even autonomous technologies, McLaren’s challenge will be to
           <span class="orange">remain at the forefront while staying true to its roots.</span>
@@ -133,23 +150,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -158,5 +175,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
