--- a/McLaren/blog-legend.html
+++ b/McLaren/blog-legend.html
@@ -28,9 +28,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -40,22 +39,34 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        
+
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#cars" class="button-header">AUTOMOTIVE</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#blog" class="button-header">OUR BLOG</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#history" class="button-header">HISTORY</a></div>
+      </nav>
+
       <div id="video-overlay">
         <!-- prettier-ignore -->
-        <p class="big"><mark> The Origin of <span class="orange"> Excellence</span> </mark></p>
-        <a href="blog-legend.html#blog-pages-bruce-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
+        <p class="big hidden"><mark> The Origin of <span class="orange"> Excellence</span> </mark></p>
+        <a href="blog-legend.html#blog-pages-bruce-id" id="btn-hidden" class="btnDiscover hidden">Read the Article</a>
       </div>
     </section>
 
     <section id="blog-pages-bruce-id" class="blog-pages-section">
       <div class="blog-pages-container">
-        <p class="blog-pages-title">Where McLaren’s Story Began</p>
-        <p class="blog-pages-data-read">October 8, 2025 | 8 min read</p>
+        <p class="blog-pages-title hidden">Where McLaren’s Story Began</p>
+        <p class="blog-pages-data-read hidden">October 8, 2025 | 8 min read</p>
 
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           The story of McLaren is, at its core, the story of one man —
           <span class="orange">Bruce McLaren.</span>
           A visionary engineer, a fearless racer, and an innovator decades ahead of his time. Born in Auckland, New
@@ -70,11 +81,11 @@
           , becoming the youngest driver at the time to win a Formula 1 race. Yet, while his career as a driver was on a
           steep rise, his true genius shone through in what he built, not just how he drove.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-bruce-photo1" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">Bruce McLaren takes the checkered flag — a legacy begins.</span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           In 1963, Bruce founded Bruce McLaren Motor Racing Ltd. in a modest workshop in New Malden, Surrey. His goal
           wasn’t simply to race — it was to create cars that embodied both speed and technical excellence. With a small
           but dedicated team, McLaren began producing innovative machines that would soon dominate the racing world. The
@@ -83,14 +94,14 @@
           precision handling, and raw power helped the team claim five consecutive championships between 1967 and 1971.
           Bruce’s philosophy was simple: every race was an opportunity to learn, to improve, and to innovate.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-bruce-photo2" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           The M6A — where McLaren’s signature papaya orange first met racing glory.
         </span>
 
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Bruce McLaren’s approach went beyond competition. He believed that racing was a test bed for ideas that could
           shape the future of performance vehicles. Every car, every innovation carried his imprint:
           <span class="orange">purpose-driven engineering guided by passion.</span>
@@ -109,14 +120,14 @@
           drives them: the belief that limits exist only to be surpassed.
         </p>
 
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-bruce-photo3" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           Before the legend, before the loss — Bruce McLaren, the young dreamer whose passion for racing shaped generations to come.
         </span>
 
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           Today, McLaren stands as one of the most respected names in motorsport and automotive engineering. The company’s
            dedication to technology, design, and performance remains rooted in the ideals Bruce set more than six decades ago.
             Each innovation — from hybrid powertrains to carbon-fiber monocoques — reflects his commitment to fusing art and science in motion. <br><br>
@@ -126,7 +137,7 @@
       </div>
 
       <div class="quote-section">
-        <div class="quote-container">
+        <div class="quote-container hidden">
           <div class="quote-photo-and-author-description-container">
             <img id="bruce-img-quote-section" src="photos-blog/Bruce-McLaren-Remuera-Heritage.webp" />
             <div class="author-description-container">
@@ -157,23 +168,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -182,5 +193,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
