--- a/McLaren/blog-track-road.html
+++ b/McLaren/blog-track-road.html
@@ -28,9 +28,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -40,27 +39,45 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
+      </nav>
+
       <div id="video-overlay">
         <!-- prettier-ignore -->
-        <p class="big"><mark><span class="orange">Beyond</span> the Finish Line </mark></p>
-        <a href="blog-track-road.html#blog-pages-road-track-id" id="btn-hidden" class="btnDiscover">Read the Article</a>
+        <p class="big hidden"><mark><span class="orange">Beyond</span> the Finish Line </mark></p>
+        <a href="blog-track-road.html#blog-pages-road-track-id" id="btn-hidden" class="btnDiscover hidden">
+          Read the Article
+        </a>
       </div>
     </section>
 
     <section id="blog-pages-road-track-id" class="blog-pages-section">
       <div class="blog-pages-container">
-        <p class="blog-pages-title">
+        <p class="blog-pages-title hidden">
           Tracing McLaren’s journey from
           <span class="orange">race-winning machines</span>
           to
           <span class="orange">road-going masterpieces.</span>
         </p>
-        <p class="blog-pages-data-read">October 8, 2025 | 5 min read</p>
+        <p class="blog-pages-data-read hidden">October 8, 2025 | 5 min read</p>
 
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           McLaren’s story began not in a design studio, but on the world’s most demanding racetracks.
           <span class="orange">Founded by Bruce McLaren in 1963</span>
           , the company was born from a relentless passion for speed and engineering precision. Every bolt, every
@@ -81,13 +98,13 @@
           . With a top speed of 386 km/h, it became the world’s fastest production car, but more importantly, it proved
           that McLaren’s racing DNA could be translated into a road-going masterpiece.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-track-road-photo1" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           The F1 wasn’t just fast — it was McLaren’s declaration of road supremacy.
         </span>
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           McLaren didn’t stop with the F1. The success of its first road car laid the foundation for a future where
           motorsport technology met real-world usability. In 2011, the
           <span class="orange">MP4-12C marked McLaren’s official return to road production</span>
@@ -98,14 +115,14 @@
           suspensions, and lightweight structures became standard, not as luxuries, but as necessities born from the
           pursuit of speed and control.
         </p>
-        <div class="blog-pages-photos-containers">
+        <div class="blog-pages-photos-containers hidden">
           <div id="blog-pages-track-road-photo2" class="blog-pages-photos"></div>
         </div>
         <span class="text-info-blog-photos">
           Aerodynamics, technology, and emotion — perfectly balanced in the MP4-12C.
         </span>
 
-        <p class="blog-pages-text">
+        <p class="blog-pages-text hidden">
           From the pit lane to public roads, McLaren’s mission has never changed: to
           <span class="orange">push boundaries</span>
           . Whether it’s the shriek of an F1 car on a Grand Prix weekend or the whisper of an Artura gliding through
@@ -116,7 +133,7 @@
           innovation can take us when we refuse to lift off the throttle.
         </p>
 
-        <div class="impact-container">
+        <div class="impact-container hidden">
           <p class="impact-text">„We don’t build road cars. We build race cars for the road.”</p>
         </div>
       </div>
@@ -134,23 +151,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -159,5 +176,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
