--- a/McLaren/car-750S.html
+++ b/McLaren/car-750S.html
@@ -22,9 +22,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -34,21 +33,37 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
+      </nav>
+
       <div id="video-overlay">
-        <p>
+        <p class="hidden">
           <span class="allura-cars-overlay">750S</span>
         </p>
-        <a href="car-750S.html#introduction-cars" id="btn-hidden" class="btnDiscover">Discover more</a>
+        <a href="car-750S.html#introduction-cars" id="btn-hidden" class="btnDiscover hidden">Discover more</a>
       </div>
     </section>
 
     <section id="introduction-cars" class="introduction-car-pages-section">
       <div class="text-car-introduction-container">
-        <p class="title-car-pages-intro">THIS IS 750S</p>
-        <p class="text-car-pages-intro">
+        <p class="title-car-pages-intro hidden">THIS IS 750S</p>
+        <p class="text-car-pages-intro hidden">
           McLaren’s lightest and most powerful series-production supercar. Born from relentless innovation and sharpened
           on the racetrack, the 750S fuses speed, precision, and pure engagement. Every line serves performance — from
           aerodynamics honed for downforce to a twin-turbo V8 delivering breathtaking acceleration. Lighter, faster,
@@ -57,18 +72,18 @@
       </div>
 
       <div class="specs-introduction-container">
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">Engine Type</p>
           <p class="info-specs">Twin-Turbo V8</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Power
             <span class="measurement">HP</span>
           </p>
           <p class="info-specs">740</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Speed
             <span class="measurement">KM/H</span>
@@ -80,14 +95,14 @@
 
     <section id="photo1-750s" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">Precision in every line</p>
-        <p class="small-overlay-text">Every curve engineered for speed.</p>
+        <p class="big-overlay-text hidden">Precision in every line</p>
+        <p class="small-overlay-text hidden">Every curve engineered for speed.</p>
       </div>
     </section>
 
     <section class="cards-car-pages-section">
       <div class="cards-car-pages-container">
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img class="photos-cards-car-pages" src="photos-car-pages/2025_novitec_mclaren_750s_6_1920x1080.jpg" />
@@ -99,7 +114,7 @@
             on the racetrack.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img
@@ -113,7 +128,7 @@
             every millisecond feels under your command.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img class="photos-cards-car-pages" src="photos-car-pages/McLaren_750S_Spider_Engine-scaled.jpg" />
@@ -130,8 +145,8 @@
 
     <section id="photo2-750s" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">Engineering elegance</p>
-        <p class="small-overlay-text">Timeless design, modern performance.</p>
+        <p class="big-overlay-text hidden">Engineering elegance</p>
+        <p class="small-overlay-text hidden">Timeless design, modern performance.</p>
       </div>
     </section>
 
@@ -149,23 +164,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -174,5 +189,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
