--- a/McLaren/car-W1.html
+++ b/McLaren/car-W1.html
@@ -15,6 +15,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet" />
+
   </head>
   <body>
     <section id="cars-hero-section" class="hero-section">
@@ -22,9 +23,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+          <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -34,38 +34,48 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#cars" class="button-header">AUTOMOTIVE</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#blog" class="button-header">OUR BLOG</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#history" class="button-header">HISTORY</a></div>
+      </nav>
+
       <div id="video-overlay">
-        <p>
+        <p class="hidden">
           <span class="allura-cars-overlay">W1</span>
         </p>
-        <a href="car-W1.html#introduction-cars" id="btn-hidden" class="btnDiscover">Discover more</a>
+        <a href="car-W1.html#introduction-cars" id="btn-hidden" class="btnDiscover hidden">Discover more</a>
       </div>
     </section>
 
     <section id="introduction-cars" class="introduction-car-pages-section">
       <div class="text-car-introduction-container">
-        <p class="title-car-pages-intro">PRESENTING W1</p>
-        <p class="text-car-pages-intro">
+        <p class="title-car-pages-intro hidden">PRESENTING W1</p>
+        <p class="text-car-pages-intro hidden">
           McLaren’s ultimate expression of elegance and power. Crafted with uncompromising attention to detail, the W1 redefines the essence of a grand tourer — blending sculpted beauty with commanding performance. Every surface flows with aerodynamic purpose, while the refined interior surrounds the driver in sophistication. Graceful yet formidable, the W1 is designed to transform every journey into a statement of prestige and performance.
         </p>
       </div>
 
       <div class="specs-introduction-container">
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">Engine Type</p>
           <p class="info-specs">Hybrid V8</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Power
             <span class="measurement">HP</span>
           </p>
           <p class="info-specs">1258</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Speed
             <span class="measurement">KM/H</span>
@@ -77,14 +87,14 @@
 
     <section id="photo1-w1" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">Ultimate Hypercar Precision</p>
-        <p class="small-overlay-text">Every detail engineered for maximum performance and exhilaration.</p>
+        <p class="big-overlay-text hidden">Ultimate Hypercar Precision</p>
+        <p class="small-overlay-text hidden">Every detail engineered for maximum performance and exhilaration.</p>
       </div>
     </section>
 
     <section class="cards-car-pages-section">
       <div class="cards-car-pages-container">
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img class="photos-cards-car-pages"
@@ -95,7 +105,7 @@
             The W1 rockets from 0 to 100 km/h in just 2.5 seconds, delivering instantaneous thrust from its hybrid powertrain. Every launch is a thrilling surge, seamlessly translating immense horsepower into unmatched speed, reminding you that this is a hypercar born for the track.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img class="photos-cards-car-pages" src="photos-car-pages/Small-16849-mclaren-w1-interior-orange (1).jpg" />
@@ -105,10 +115,11 @@
            Every control in the W1 is meticulously positioned around the driver. From the sculpted steering wheel to the digital instrument cluster, every element prioritizes clarity and accessibility. The cockpit ensures that focus remains entirely on the road, creating a seamless connection between driver and machine.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <video
+            loading="lazy"
               autoplay
               loop
               muted
@@ -126,14 +137,14 @@
 
     <section id="photo2-w1" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">The Pinnacle of Performance</p>
-        <p class="small-overlay-text">W1 fuses cutting-edge engineering with uncompromising aerodynamics.</p>
+        <p class="big-overlay-text hidden">The Pinnacle of Performance</p>
+        <p class="small-overlay-text hidden">W1 fuses cutting-edge engineering with uncompromising aerodynamics.</p>
       </div>
     </section>
 
     <div class="extra-black"></div>
 
-    <section class="footer-section">
+   <section class="footer-section">
       <div class="container-footer">
         <div class="footer-sections">
           <p class="footer-subtitle">AUTOMOTIVE</p>
@@ -145,23 +156,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -170,5 +181,7 @@
         </div>
       </div>
     </section>
+
+    <script src="index.js"></script>
   </body>
 </html>
