--- a/McLaren/car-artura.html
+++ b/McLaren/car-artura.html
@@ -22,9 +22,8 @@
 
       <div href="index.html#home" id="header">
         <a href="index.html#home" id="logo">
-          <p class="M">Mc</p>
-          <p class="orange">Laren</p>
-          <img id="McLarenIcon" src="photos/icons8-mclaren-30.png" />
+         <!-- prettier-ignore -->
+          <p id="logo-footer-text" class="M">M<span>c</span><span class="orange">Laren</span></p>
         </a>
 
         <div class="buttons">
@@ -34,21 +33,31 @@
           <a href="index.html#history" class="button-header" id="btnHistory">HISTORY</a>
         </div>
 
+        <div class="menu-toggle" id="mobile-menu-icon"></div>
+
         <div id="accountIcon"></div>
       </div>
 
+      <nav class="mobile-nav hidden2">
+        <img id="close-menu-btn" src="photos/icons8-close.svg" />
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#cars" class="button-header">AUTOMOTIVE</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#blog" class="button-header">OUR BLOG</a></div>
+        <div class="bottom-border-mobile-menu-selections"><a href="index.html#history" class="button-header">HISTORY</a></div>
+      </nav>
+
       <div id="video-overlay">
-        <p>
+        <p class="hidden">
           <span class="allura-cars-overlay">Artura</span>
         </p>
-        <a href="car-artura.html#introduction-cars" id="btn-hidden" class="btnDiscover">Discover more</a>
+        <a href="car-artura.html#introduction-cars" id="btn-hidden" class="btnDiscover hidden">Discover more</a>
       </div>
     </section>
 
     <section id="introduction-cars" class="introduction-car-pages-section">
       <div class="text-car-introduction-container">
-        <p class="title-car-pages-intro">UNVEILING ARTURA</p>
-        <p class="text-car-pages-intro">
+        <p class="title-car-pages-intro hidden">UNVEILING ARTURA</p>
+        <p class="text-car-pages-intro hidden">
           McLaren’s cutting-edge hybrid supercar, engineered for exhilarating performance and efficiency. Born from
           relentless innovation and inspired by the racetrack, the Artura blends electrified power with precision
           handling. Every curve, every surface, is designed to optimize aerodynamics and responsiveness. Lighter,
@@ -57,18 +66,18 @@
       </div>
 
       <div class="specs-introduction-container">
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">Engine Type</p>
           <p class="info-specs">V6 Hybrid</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Power
             <span class="measurement">HP</span>
           </p>
           <p class="info-specs">690</p>
         </div>
-        <div class="specs-containers">
+        <div class="specs-containers hidden">
           <p class="title-specs">
             Speed
             <span class="measurement">KM/H</span>
@@ -80,17 +89,17 @@
 
     <section id="photo1-artura" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">Efficiency meets power</p>
-        <p class="small-overlay-text">Hybrid technology, unleashed with McLaren precision.</p>
+        <p class="big-overlay-text hidden">Efficiency meets power</p>
+        <p class="small-overlay-text hidden">Hybrid technology, unleashed with McLaren precision.</p>
       </div>
     </section>
 
     <section class="cards-car-pages-section">
       <div class="cards-car-pages-container">
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
-            <video
+            <video loading="lazy"
               autoplay
               loop
               muted
@@ -105,7 +114,7 @@
             — proof that supercar thrills and future-ready technology can coexist.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
             <img class="photos-cards-car-pages" src="photos-car-pages/Small-15829-McLarenArtura0404.jpg" />
@@ -117,10 +126,10 @@
             integration.
           </p>
         </div>
-        <div class="cards-car-pages">
+        <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
-            <video
+            <video loading="lazy"
               autoplay
               loop
               muted
@@ -140,8 +149,8 @@
 
     <section id="photo2-artura" class="photo-car-pages-section">
       <div class="photo-car-pages-overlay-left">
-        <p class="big-overlay-text">The hybrid supercar</p>
-        <p class="small-overlay-text">Lightweight, efficient, and sharper than ever.</p>
+        <p class="big-overlay-text hidden">The hybrid supercar</p>
+        <p class="small-overlay-text hidden">Lightweight, efficient, and sharper than ever.</p>
       </div>
     </section>
 
@@ -159,23 +168,23 @@
 
         <div class="footer-sections">
           <p class="footer-subtitle">BLOG</p>
-          <a class="footer-text">Formula 1</a>
-          <a class="footer-text">Innovation</a>
-          <a class="footer-text">Experience</a>
+          <a href="blog-formula1.html" class="footer-text">Formula 1</a>
+          <a href="blog-innovation.html" class="footer-text">Innovation</a>
+          <a href="blog-experience.html" class="footer-text">Experience</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">HISTORY</p>
-          <a class="footer-text">The Beginning of a Legend</a>
-          <a class="footer-text">From Track to Road</a>
+          <a href="blog-legend.html" class="footer-text">The Beginning of a Legend</a>
+          <a href="blog-track-road.html" class="footer-text">From Track to Road</a>
         </div>
 
         <div class="footer-sections">
           <p class="footer-subtitle">POLICIES & TERMS</p>
-          <a class="footer-text">Cookie Policy</a>
-          <a class="footer-text">Privacy Policy</a>
-          <a class="footer-text">Terms and Conditions</a>
-          <a class="footer-text">Legal Notice</a>
+          <p class="footer-text">Cookie Policy</p>
+          <p class="footer-text">Privacy Policy</p>
+          <p class="footer-text">Terms and Conditions</p>
+          <p class="footer-text">Legal Notice</p>
         </div>
 
         <div class="footer-sections">
@@ -184,5 +193,6 @@
         </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
