adding functionality for account icon

--- a/McLaren/car-W1.html
+++ b/McLaren/car-W1.html
@@ -36,7 +36,7 @@
 
         <div class="menu-toggle" id="mobile-menu-icon"></div>
 
-        <div id="accountIcon"></div>
+        <a href="login.html" id="accountIcon"></a>
       </div>
 
       <nav class="mobile-nav hidden2">
