--- a/McLaren/car-artura.html
+++ b/McLaren/car-artura.html
@@ -35,7 +35,7 @@
 
         <div class="menu-toggle" id="mobile-menu-icon"></div>
 
-        <div id="accountIcon"></div>
+        <a href="login.html" id="accountIcon"></a>
       </div>
 
       <nav class="mobile-nav hidden2">
