w1 rear wing video compressed

--- a/McLaren/car-W1.html
+++ b/McLaren/car-W1.html
@@ -125,7 +125,7 @@
               muted
               playsinline
               class="photos-cards-car-pages"
-              src="photos-car-pages/16838-w1-rear-wing.mp4" >
+              src="photos-history-blogs/16838-w1-rear-wing (1) (1) (1).mp4" >
           </div>
           <p class="title-car-pages-cards">Adaptive Aero Dynamics</p>
           <p class="text-car-pages-cards">
