--- a/McLaren/car-W1.html
+++ b/McLaren/car-W1.html
@@ -15,7 +15,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet" />
-
   </head>
   <body>
     <section id="cars-hero-section" class="hero-section">
@@ -42,9 +41,15 @@
       <nav class="mobile-nav hidden2">
         <img id="close-menu-btn" src="photos/icons8-close.svg" />
         <div class="bottom-border-mobile-menu-selections"><a href="index.html#home" class="button-header">HOME</a></div>
-        <div class="bottom-border-mobile-menu-selections"><a href="index.html#cars" class="button-header">AUTOMOTIVE</a></div>
-        <div class="bottom-border-mobile-menu-selections"><a href="index.html#blog" class="button-header">OUR BLOG</a></div>
-        <div class="bottom-border-mobile-menu-selections"><a href="index.html#history" class="button-header">HISTORY</a></div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#cars" class="button-header">AUTOMOTIVE</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#blog" class="button-header">OUR BLOG</a>
+        </div>
+        <div class="bottom-border-mobile-menu-selections">
+          <a href="index.html#history" class="button-header">HISTORY</a>
+        </div>
       </nav>
 
       <div id="video-overlay">
@@ -59,7 +64,10 @@
       <div class="text-car-introduction-container">
         <p class="title-car-pages-intro hidden">PRESENTING W1</p>
         <p class="text-car-pages-intro hidden">
-          McLaren’s ultimate expression of elegance and power. Crafted with uncompromising attention to detail, the W1 redefines the essence of a grand tourer — blending sculpted beauty with commanding performance. Every surface flows with aerodynamic purpose, while the refined interior surrounds the driver in sophistication. Graceful yet formidable, the W1 is designed to transform every journey into a statement of prestige and performance.
+          McLaren’s ultimate expression of elegance and power. Crafted with uncompromising attention to detail, the W1
+          redefines the essence of a grand tourer — blending sculpted beauty with commanding performance. Every surface
+          flows with aerodynamic purpose, while the refined interior surrounds the driver in sophistication. Graceful
+          yet formidable, the W1 is designed to transform every journey into a statement of prestige and performance.
         </p>
       </div>
 
@@ -97,12 +105,13 @@
         <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
-            <img class="photos-cards-car-pages"
-              src="photos-car-pages/Small-16837-1-mclaren-w1-front-3q-high.jpg" />
+            <img class="photos-cards-car-pages" src="photos-car-pages/Small-16837-1-mclaren-w1-front-3q-high.jpg" />
           </div>
           <p class="title-car-pages-cards">Lightning Launch</p>
           <p class="text-car-pages-cards">
-            The W1 rockets from 0 to 100 km/h in just 2.5 seconds, delivering instantaneous thrust from its hybrid powertrain. Every launch is a thrilling surge, seamlessly translating immense horsepower into unmatched speed, reminding you that this is a hypercar born for the track.
+            The W1 rockets from 0 to 100 km/h in just 2.5 seconds, delivering instantaneous thrust from its hybrid
+            powertrain. Every launch is a thrilling surge, seamlessly translating immense horsepower into unmatched
+            speed, reminding you that this is a hypercar born for the track.
           </p>
         </div>
         <div class="cards-car-pages hidden">
@@ -112,24 +121,23 @@
           </div>
           <p class="title-car-pages-cards">Driver-Focused Cockpit</p>
           <p class="text-car-pages-cards">
-           Every control in the W1 is meticulously positioned around the driver. From the sculpted steering wheel to the digital instrument cluster, every element prioritizes clarity and accessibility. The cockpit ensures that focus remains entirely on the road, creating a seamless connection between driver and machine.
+            Every control in the W1 is meticulously positioned around the driver. From the sculpted steering wheel to
+            the digital instrument cluster, every element prioritizes clarity and accessibility. The cockpit ensures
+            that focus remains entirely on the road, creating a seamless connection between driver and machine.
           </p>
         </div>
         <div class="cards-car-pages hidden">
           <div class="container-for-overlay">
             <div class="overlay"></div>
-            <video
-            loading="lazy"
-              autoplay
-              loop
-              muted
-              playsinline
+            <img
               class="photos-cards-car-pages"
-              src="photos-history-blogs/16838-w1-rear-wing (1) (1) (1) (1).mp4" >
+              src="photos-history-blogs/Small-16814-25-mclaren-w1-wing-detail-in-race-mode.jpg" />
           </div>
           <p class="title-car-pages-cards">Adaptive Aero Dynamics</p>
           <p class="text-car-pages-cards">
-           The W1’s rear spoiler automatically rises at high speeds to increase downforce, enhancing stability and cornering precision. At lower speeds, it retracts smoothly to maintain sleek aerodynamics and a refined profile. This dynamic system ensures optimal performance and control in every driving condition.
+            The W1’s rear spoiler automatically rises at high speeds to increase downforce, enhancing stability and
+            cornering precision. At lower speeds, it retracts smoothly to maintain sleek aerodynamics and a refined
+            profile. This dynamic system ensures optimal performance and control in every driving condition.
           </p>
         </div>
       </div>
@@ -144,7 +152,7 @@
 
     <div class="extra-black"></div>
 
-   <section class="footer-section">
+    <section class="footer-section">
       <div class="container-footer">
         <div class="footer-sections">
           <p class="footer-subtitle">AUTOMOTIVE</p>
